--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,38 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta property="og:description" content="Welcome to the first project I made with Angular and Firebase, the Ben Forrester Portfolio website. I made this to have one place to showcase my works. Proficient with Html, CSS, and JavaScript. Skilled with Adobe Creative Suite. Namely Illustrator for icon and character design, and After Effects for making Lottie animations. ">
-  <meta property="og:url" content="https://https://forrester-angular.web.app/">
-  <meta property="og:site_name" content="Ben Forrester Portfolio">
-  <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/forrester-angular.appspot.com/o/imgs%2Flogo.png?alt=media&token=912770ea-87f8-42ed-8dfb-2bf25c704399">
-  <meta property="og:image:width" content="512">
-  <meta property="og:image:height" content="512">
-  <meta property="og:title" content="Ben Forrester Portfolio" />
-<meta name="author" content="Ben Forrester">
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-</head>
-<body class="mat-typography">
-  <app-component></app-component>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      property="og:description"
+      content="Welcome to the first project I made with Angular and Firebase, the Ben Forrester Portfolio website. I made this to have one place to showcase my works. Proficient with Html, CSS, and JavaScript. Skilled with Adobe Creative Suite. Namely Illustrator for icon and character design, and After Effects for making Lottie animations. "
+    />
+    <meta
+      property="og:url"
+      content="https://https://forrester-angular.web.app/"
+    />
+    <meta property="og:site_name" content="Ben Forrester Portfolio" />
+    <meta
+      property="og:image"
+      content="https://firebasestorage.googleapis.com/v0/b/forrester-angular.appspot.com/o/imgs%2Flogo.png?alt=media&token=912770ea-87f8-42ed-8dfb-2bf25c704399"
+    />
+    <meta property="og:image:width" content="512" />
+    <meta property="og:image:height" content="512" />
+    <meta property="og:title" content="Ben Forrester Portfolio" />
+    <meta name="author" content="Ben Forrester" />
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+  </head>
+  <body class="mat-typography">
+    <app-component></app-component>
+  </body>
 </html>
