adds loader animation

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Ben Forrester Portfolio | Angular | Firebase</title>
     <meta charset="utf-8" />
+    <meta
+      property="description"
+      content="Welcome to the first project I made with Angular and Firebase, the Ben Forrester Portfolio website. I made this to have one place to showcase my works. Proficient with Html, CSS, and JavaScript. Skilled with Adobe Creative Suite. Namely Illustrator for icon and character design, and After Effects for making Lottie animations. "
+    />
     <meta
       property="og:description"
       content="Welcome to the first project I made with Angular and Firebase, the Ben Forrester Portfolio website. I made this to have one place to showcase my works. Proficient with Html, CSS, and JavaScript. Skilled with Adobe Creative Suite. Namely Illustrator for icon and character design, and After Effects for making Lottie animations. "
@@ -17,7 +22,10 @@
     />
     <meta property="og:image:width" content="512" />
     <meta property="og:image:height" content="512" />
-    <meta property="og:title" content="Ben Forrester Portfolio" />
+    <meta
+      property="og:title"
+      content="Ben Forrester Portfolio | Angular | Firebase"
+    />
     <meta name="author" content="Ben Forrester" />
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -32,6 +40,7 @@
       rel="stylesheet"
     />
   </head>
+
   <body class="mat-typography">
     <app-component></app-component>
   </body>
